# teaching_optimization

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: build_wheels.yml
examples/: metropolis_hastings_lecture.py  milp_slides.py  simplex_tableau_phase_two.py
src/teaching_optimization/: simplex.py  simplex_tableau.py  simplex_tableau_phase_two.py  tableau.py  to_jupyter.py
src/teaching_optimization/branch_and_bound/: branch_and_bound_milp.py  solution.py  subproblem.py
src/teaching_optimization/linear_constraints/: constraint.py  draw_polyhedron.py  linear_constraints.py  polyhedron_2d.py  standard_canonical.py
src/teaching_optimization/metropolis_hastings/: markov_chain.py  metropolis_hastings.py
src/teaching_optimization/networks/: __init__.py  bellman.py  draw_network.py  shortest_path_algorithm.py
tests/: test_bellman.py  test_constraints.py  test_linear_constraints.py  test_linear_optimization.py  test_markov_chain.py  test_matrices.py  test_mh.py  test_plot_function.py  test_polyhedron_2d.py  test_shortest_path.py  test_simplex.py  test_simplex_tableau.py  test_simplex_tableau_phase_two.py  test_simplex_transhipment.py  test_standard_canonical.py  test_standard_form.py  test_tableau.py  test_variables.py
