[build-system]
requires = ["setuptools>=71.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teaching-optimization"
version = "0.0.1"
requires-python = ">= 3.10"
description = "Pedagogical material for teaching optimization"
readme = "README.md"
authors = [
    { name = "Michel Bierlaire", email = "michel.bierlaire@epfl.ch" }
]
classifiers = [
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only"
]

dependencies = [
    "numpy >= 2.0.1",
    "pandas >= 2.2.2",
    "scipy >= 1.14.0",
    "matplotlib >= 3.9.1",
    "nbformat >= 5.10.4",
    "networkx >= 3.3"
]

[project.urls]
homepage = "http://biogeme.epfl.ch"
repository = "https://github.com/michelbierlaire/teaching_optimization"
download = "https://pypi.org/project/teaching-optimization"



[project.optional-dependencies]
testing = [
    "pytest >= 8.3.1"   ,
    "pytest-cov >= 5.0.0",
    "tox >= 4.16.0"
]

[tool.setuptools.packages.find]
where = ["src"]