[metadata]
name = teaching-optimization
version = 0.0.1
description = Pedagogical material for teaching optimization
long_description = file: README.md
long_description_content_type = text/markdown
author = Michel Bierlaire
author_email = michel.bierlaire@epfl.ch
url = http://biogeme.epfl.ch
download_urls = https://pypi.org/project/teaching-optimization
project_urls =
	Code = https://github.com/michelbierlaire/teaching_optimization
classifiers =
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Mathematics
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
package_dir = =src
packages = find:
install_requires =
    numpy >= 1.24.2
    scipy >= 1.10.1
    matplotlib >= 3.8.2
    nbformat >= 5.9.2
[options.packages.find]
where=src

[options.extras_require]
testing = 
    pytest >= 7.2.0
    pytest-cov >= 4.0.0
    tox >= 3.27.1
        

